@@ -1,9 +1,6 @@
 To be addressed before 7.17.2 (planned release: December 2007)
 =============================
 
-106 - Share interface force-enable the cookie parser
-      http://curl.haxx.se/mail/lib-2007-11/0234.html
-
 107 - resolve the type= thing for FTP URLs over HTTP proxies
 
 108 - 
