@@ -24,6 +24,8 @@ This release includes the following bugfixes:
  o variable wrapping when using debug callback and the HTTP request wasn't sent
    in one go
  o SSL connections with NSS done with the multi-interface
+ o setting a share no longer activates cookies
+ o Negotiate now works on auth and proxy simultanouesly
 
 This release includes the following known bugs:
 
@@ -42,6 +44,7 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Dan Fandrich, Gisle Vanem, Toby Peterson, Yang Tse, Daniel Black,
- Robin Johnson, Michal Marek, Ates Goral, Andres Garcia, Rob Crittenden
+ Robin Johnson, Michal Marek, Ates Goral, Andres Garcia, Rob Crittenden,
+ Emil Romanus
  
         Thanks! (and sorry if I forgot to mention someone)
